--- a/themes/hugo-whisper-theme/assets/scss/_bootstrap-variables.scss
+++ b/themes/hugo-whisper-theme/assets/scss/_bootstrap-variables.scss
@@ -15,7 +15,7 @@ $container-max-widths: (
 
 $grid-gutter-width: 20px;
 
-$primary: #1de9b6;
+$primary: #4287f5;
 $secondary: #ffca28;
 $black: #212529;
 
