--- a/themes/hugo-whisper-theme/layouts/partials/sub-footer.html
+++ b/themes/hugo-whisper-theme/layouts/partials/sub-footer.html
@@ -4,7 +4,7 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
-            <li class="zerostatic"><a href="https://www.zerostatic.io">www.zerostatic.io</a></li>
+            <li class="zerostatic"><a href="https://www.goacademy.ee">www.goacademy.ee</a></li>
           </ul>
         </div>
       </div>
