--- a/themes/hugo-whisper-theme/assets/scss/components/_overview.scss
+++ b/themes/hugo-whisper-theme/assets/scss/components/_overview.scss
@@ -1,5 +1,5 @@
 .overview {
-  background: lightgoldenrodyellow;
+  background: #e9ecef;
   border-radius: 3px;
   padding: 4px 10px 4px 10px;
   float: right;
