--- a/themes/hugo-whisper-theme/layouts/index.html
+++ b/themes/hugo-whisper-theme/layouts/index.html
@@ -31,10 +31,36 @@
         <a class="button button-primary mb-2" href="{{ .Site.Params.homepage_button_link | relURL }}">
           {{ .Site.Params.homepage_button_text }}
         </a>
+      
+      <div>
+        <a class="typeform-share button" href="https://nazdatascience.typeform.com/to/cIKCtN" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#3D3D3D;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:17px;line-height:42.5px;text-align:center;margin:0;height:42.5px;padding:0px 28px;border-radius:6px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" data-submit-close-delay="0" target="_blank">Register now </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+    </div>
+  </div>
+  </div>
+</div>
+
+<!-- Write your comments here 
+<section class="fdb-block" style="background-image: url(imgs/hero/red.svg);">
+  <div class="container">
+    <div class="fdb-box">
+      <div class="row align-items-center justify-content-center">
+        <div class="col-10 col-sm-6 col-md-4 col-lg-3 col-xl-2 m-auto">
+          <img alt="image" class="img-fluid rounded-circle" src="https://media-exp1.licdn.com/dms/image/C4D03AQFd-j5L8aycTg/profile-displayphoto-shrink_200_200/0?e=1591833600&v=beta&t=YTw7s5ZQDg5u3h7_LdnbZyiM7sBFFykzuJlaGJ4gkHc">
+        </div>
+
+        <div class="col-12 col-md-8 ml-auto mr-auto mt-4 mt-md-0">
+          <p class="lead">
+            "Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar."
+          </p>
+
+          <p class="h3 mt-4 mt-lg-5"><strong>Person Name</strong></p>
+          <p><em>Co-founder at Company</em></p>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</section>
+-->
 
 {{ if .Site.Params.homepage_image }}
 <div class="strip">
